--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -60,7 +60,8 @@ heading_anchors: true
 # color_scheme: dark
 
 # Build settings
-theme: just-the-docs
+# theme: just-the-docs
+remote_theme: just-the-docs/just-the-docs
 plugins:
   - jekyll-feed
 
