--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -59,6 +59,8 @@ heading_anchors: true
 
 color_scheme: inlaserworld
 
+logo: "/assets/images/INLASERWORLD_modrobile.png"
+
 # Build settings
 # theme: just-the-docs
 remote_theme: just-the-docs/just-the-docs
