--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,12 +18,12 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: In Engine
+title: IN Engine
 email: engine@inlaserworld.com
 description: >- # this means to ignore newlines until "baseurl:"
   This site is documentation of inlaserworld engine.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://docs.inlaserworld.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
