--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,7 @@ plugins/**/library_*.h
 plugins/**/custom_variables_map_*.h
 plugins/**/BUILD.mk
 plugins/**/SUBMODULES.mk
+plugins/**/stm32f4_flash.ld
 
 
 
