--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@inlaserworld/unit-api": "^0.9.8",
     "@reduxjs/toolkit": "^2.6.1",
+    "use-context-selector": "^1.3.5",
     "axios": "^1.8.4",
     "react-redux": "^9.2.0",
     "swr": "^2.3.3"
